// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast should render correctly 1`] = `
.c4 {
  fill: #545456;
  cursor: pointer;
}

.c4:hover {
  fill: #757679;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 1.025rem;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  background-color: #FFF;
  border-radius: 0.125rem;
  color: #000;
  box-shadow: rgba(67,90,111,0.416) 0 0 1px, rgba(67,90,111,0.3) 0 8px 10px -4px;
  min-width: 250px;
  max-width: 560px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 0%;
  -ms-flex: 1 1 0%;
  flex: 1 1 0%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 600;
}

.c3 {
  padding-left: 1.025rem;
}

<Toast
  title="Hey! This is a default toast."
  type="default"
>
  <styled.div>
    <div
      className="c0"
    >
      <styled.div>
        <div
          className="c1"
        >
          <styled.div>
            <div
              className="c2"
            >
              Hey! This is a default toast.
            </div>
          </styled.div>
        </div>
      </styled.div>
      <styled.div>
        <div
          className="c3"
        >
          <FasTimes
            selectable={true}
            size="16px"
          >
            <styled.svg
              height="16px"
              selectable={true}
              viewBox="0 0 352 512"
              width="16px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <svg
                className="c4"
                height="16px"
                viewBox="0 0 352 512"
                width="16px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                />
              </svg>
            </styled.svg>
          </FasTimes>
        </div>
      </styled.div>
    </div>
  </styled.div>
</Toast>
`;

exports[`Toast should render correctly with description 1`] = `
.c5 {
  fill: #545456;
  cursor: pointer;
}

.c5:hover {
  fill: #757679;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 1.025rem;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  background-color: #FFF;
  border-radius: 0.125rem;
  color: #000;
  box-shadow: rgba(67,90,111,0.416) 0 0 1px, rgba(67,90,111,0.3) 0 8px 10px -4px;
  min-width: 250px;
  max-width: 560px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 0%;
  -ms-flex: 1 1 0%;
  flex: 1 1 0%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 600;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 0.325rem;
}

.c4 {
  padding-left: 1.025rem;
}

<Toast
  description="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
  title="This is a default toast."
  type="default"
>
  <styled.div>
    <div
      className="c0"
    >
      <styled.div>
        <div
          className="c1"
        >
          <styled.div>
            <div
              className="c2"
            >
              This is a default toast.
            </div>
          </styled.div>
          <styled.div>
            <div
              className="c3"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </div>
          </styled.div>
        </div>
      </styled.div>
      <styled.div>
        <div
          className="c4"
        >
          <FasTimes
            selectable={true}
            size="16px"
          >
            <styled.svg
              height="16px"
              selectable={true}
              viewBox="0 0 352 512"
              width="16px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <svg
                className="c5"
                height="16px"
                viewBox="0 0 352 512"
                width="16px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                />
              </svg>
            </styled.svg>
          </FasTimes>
        </div>
      </styled.div>
    </div>
  </styled.div>
</Toast>
`;

exports[`Toast should render correctly with type=danger 1`] = `
.c8 {
  fill: #545456;
  cursor: pointer;
}

.c8:hover {
  fill: #757679;
}

.c3 {
  fill: #545456;
  cursor: default;
}

.c3:hover {
  fill: #545456;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 1.025rem;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  background-color: #FFF;
  border-radius: 0.125rem;
  color: #000;
  box-shadow: rgba(67,90,111,0.416) 0 0 1px, rgba(67,90,111,0.3) 0 8px 10px -4px;
  min-width: 250px;
  max-width: 560px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 0%;
  -ms-flex: 1 1 0%;
  flex: 1 1 0%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 600;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 0.325rem;
}

.c7 {
  padding-left: 1.025rem;
}

.c2 {
  padding-right: 1.025rem;
  fill: #F7C653;
}

.c2:hover {
  fill: #F7C653;
}

.c1 {
  fill: #F36331;
}

.c1:hover {
  fill: #F36331;
}

<Toast
  description="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
  title="This is a default toast."
  type="danger"
>
  <styled.div>
    <div
      className="c0"
    >
      <Styled(Styled(FasExclamationCircle))>
        <Styled(FasExclamationCircle)
          className="c1"
        >
          <FasExclamationCircle
            className="c1 c2"
            selectable={false}
            size="16px"
          >
            <styled.svg
              className="c1 c2"
              height="16px"
              selectable={false}
              viewBox="0 0 512 512"
              width="16px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <svg
                className="c1 c2 c3"
                height="16px"
                viewBox="0 0 512 512"
                width="16px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                />
              </svg>
            </styled.svg>
          </FasExclamationCircle>
        </Styled(FasExclamationCircle)>
      </Styled(Styled(FasExclamationCircle))>
      <styled.div>
        <div
          className="c4"
        >
          <styled.div>
            <div
              className="c5"
            >
              This is a default toast.
            </div>
          </styled.div>
          <styled.div>
            <div
              className="c6"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </div>
          </styled.div>
        </div>
      </styled.div>
      <styled.div>
        <div
          className="c7"
        >
          <FasTimes
            selectable={true}
            size="16px"
          >
            <styled.svg
              height="16px"
              selectable={true}
              viewBox="0 0 352 512"
              width="16px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <svg
                className="c8"
                height="16px"
                viewBox="0 0 352 512"
                width="16px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                />
              </svg>
            </styled.svg>
          </FasTimes>
        </div>
      </styled.div>
    </div>
  </styled.div>
</Toast>
`;

exports[`Toast should render correctly with type=success 1`] = `
.c7 {
  fill: #545456;
  cursor: pointer;
}

.c7:hover {
  fill: #757679;
}

.c2 {
  fill: #545456;
  cursor: default;
}

.c2:hover {
  fill: #545456;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 1.025rem;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  background-color: #FFF;
  border-radius: 0.125rem;
  color: #000;
  box-shadow: rgba(67,90,111,0.416) 0 0 1px, rgba(67,90,111,0.3) 0 8px 10px -4px;
  min-width: 250px;
  max-width: 560px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 0%;
  -ms-flex: 1 1 0%;
  flex: 1 1 0%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 600;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 0.325rem;
}

.c6 {
  padding-left: 1.025rem;
}

.c1 {
  padding-right: 1.025rem;
  fill: #47B881;
}

.c1:hover {
  fill: #47B881;
}

<Toast
  description="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
  title="This is a default toast."
  type="success"
>
  <styled.div>
    <div
      className="c0"
    >
      <Styled(FasCheckCircle)>
        <FasCheckCircle
          className="c1"
          selectable={false}
          size="16px"
        >
          <styled.svg
            className="c1"
            height="16px"
            selectable={false}
            viewBox="0 0 512 512"
            width="16px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <svg
              className="c1 c2"
              height="16px"
              viewBox="0 0 512 512"
              width="16px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
              />
            </svg>
          </styled.svg>
        </FasCheckCircle>
      </Styled(FasCheckCircle)>
      <styled.div>
        <div
          className="c3"
        >
          <styled.div>
            <div
              className="c4"
            >
              This is a default toast.
            </div>
          </styled.div>
          <styled.div>
            <div
              className="c5"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </div>
          </styled.div>
        </div>
      </styled.div>
      <styled.div>
        <div
          className="c6"
        >
          <FasTimes
            selectable={true}
            size="16px"
          >
            <styled.svg
              height="16px"
              selectable={true}
              viewBox="0 0 352 512"
              width="16px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <svg
                className="c7"
                height="16px"
                viewBox="0 0 352 512"
                width="16px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                />
              </svg>
            </styled.svg>
          </FasTimes>
        </div>
      </styled.div>
    </div>
  </styled.div>
</Toast>
`;

exports[`Toast should render correctly with type=warning 1`] = `
.c7 {
  fill: #545456;
  cursor: pointer;
}

.c7:hover {
  fill: #757679;
}

.c2 {
  fill: #545456;
  cursor: default;
}

.c2:hover {
  fill: #545456;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 1.025rem;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  background-color: #FFF;
  border-radius: 0.125rem;
  color: #000;
  box-shadow: rgba(67,90,111,0.416) 0 0 1px, rgba(67,90,111,0.3) 0 8px 10px -4px;
  min-width: 250px;
  max-width: 560px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 0%;
  -ms-flex: 1 1 0%;
  flex: 1 1 0%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 600;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 0.325rem;
}

.c6 {
  padding-left: 1.025rem;
}

.c1 {
  padding-right: 1.025rem;
  fill: #F7C653;
}

.c1:hover {
  fill: #F7C653;
}

<Toast
  description="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
  title="This is a default toast."
  type="warning"
>
  <styled.div>
    <div
      className="c0"
    >
      <Styled(FasExclamationCircle)>
        <FasExclamationCircle
          className="c1"
          selectable={false}
          size="16px"
        >
          <styled.svg
            className="c1"
            height="16px"
            selectable={false}
            viewBox="0 0 512 512"
            width="16px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <svg
              className="c1 c2"
              height="16px"
              viewBox="0 0 512 512"
              width="16px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
              />
            </svg>
          </styled.svg>
        </FasExclamationCircle>
      </Styled(FasExclamationCircle)>
      <styled.div>
        <div
          className="c3"
        >
          <styled.div>
            <div
              className="c4"
            >
              This is a default toast.
            </div>
          </styled.div>
          <styled.div>
            <div
              className="c5"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </div>
          </styled.div>
        </div>
      </styled.div>
      <styled.div>
        <div
          className="c6"
        >
          <FasTimes
            selectable={true}
            size="16px"
          >
            <styled.svg
              height="16px"
              selectable={true}
              viewBox="0 0 352 512"
              width="16px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <svg
                className="c7"
                height="16px"
                viewBox="0 0 352 512"
                width="16px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                />
              </svg>
            </styled.svg>
          </FasTimes>
        </div>
      </styled.div>
    </div>
  </styled.div>
</Toast>
`;
